--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header id="cabecalho"><img src="resources/elec.PNG" alt="IMEP" id="logo">
+    <header id="cabecalho"><img src="resources/elec.png" alt="IMEP" id="logo">
          <div class="instituto"></div>
          <div class="header_image_holder">
             <a href='/'>
