--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             </div>
     </header>
-    <div class="exp"><div id="nav" class="explicacao" style="font-size:8pt">
+    <div class="exp"><div id="nav" class="explicacao">
         <p>Norma Brasileira</p> <div id="bandeira"><div></div></div>
     </div>
     </div>
