--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Potência Total da Instalação (Norma Brasileira) </title>
     <link rel="stylesheet" href="public/pi.css">
     <link rel="stylesheet" href="public/pi_divisoes.css">
-    <script src="public/jquery-3.6.0.min.js"></script>
+    <script src="public/jquery-3.6.0.min.js" defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4357309759082729"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
