--- a/eu.html
+++ b/eu.html
@@ -12,6 +12,6 @@
     <div class="nome">Dário Aliky Mazuze. 
         <p>Estudante de Eletricidade e Informática.<br>
             Self Tought Web Developer</p><br>
-        <a href="pi.html"> Back Home-></a></div>
+        <a href="/"> Back Home-></a></div>
 </body>
 </html>
